--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
 </head>
 <h1>Minha primeira página HTML</h1>
 <body>
-    
+    <title>Nome do site </title>;
+    <header>;
+        <img class="logo">;
+        <h1 class="cabecalho_imgempresa"></h1>;
+    </header>;
+
+    <nav> <ul> 
+        <li>
+        <a href="home.html">home</a>
+        </li>
+
+        <li>
+        <a href="informacoes.html">Informações </a>
+        </li> </ul> </nav>
+
+        <main>
+            <img class="carrosel">;
+        </main>
+
+        <section class="imgdireita">
+            <img class="imagemD">
+            <p>  </p>
+        </section>
+
+        <section class="imgesquerda">
+            <img class="imagemE">
+            <p class="texto2"> </p>
+
+        </section>
+
+    </ul>
+
+
+
+
 </body>
 </html>
