--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha primeira página HTML</title>
+    <title>Aula 1</title>
 </head>
-<h1>Minha primeira página HTML</h1>
 <body>
-    <title>Nome do site </title>;
-    <header>;
-        <img class="logo">;
-        <h1 class="cabecalho_imgempresa"></h1>;
-    </header>;
+    
+    <header class="cabecalho">
+        <h1 class="cabecalho__titulo"> Minha primeira aula de Git Hub com VSCode</h1>
+        <nav class="cabecalho__menu">
+           <a href="#">HOME</a> 
+           <a href="#"> Quem Somos</a>
+        </nav>
+    </header>
+ 
 
     <nav> <ul> 
         <li>
@@ -38,9 +41,6 @@
         </section>
 
     </ul>
-
-
-
 
 </body>
 </html>
