--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 <body>
 
     <header class="cabecalho">
+        
+        <img src="" class="cabecalho__img">
+
         <h1 class="cabecalho__titulo">EME Professora Alcina Dantas Feijão</h1>
-    </header>
-    
+
     <nav class="cabecalho__menu">
         <ul>
            <li><a href="index.html">HOME</a> </li>
            <li><a href="quemsomos.html">Quem sou</a> </li>
         </ul>
         </nav>
+    </header>
 
         <main>
             <h2>Vinicius Shinohara Barbosa</h2>    
