--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header class="cabecalho">
         
-        <img src="" class="cabecalho__img">
+        <img src="logo" class="cabecalho__img">
 
         <h1 class="cabecalho__titulo">EME Professora Alcina Dantas Feijão</h1>
 
